third_party/vendor/async-stream-0.3.2/tests/ui/yield_in_nested_fn.stderr
error[E0658]: yield syntax is experimental
 --> $DIR/yield_in_nested_fn.rs:6:13
  |
6 |             yield "hello";
  |             ^^^^^^^^^^^^^
  |
  = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information

error[E0627]: yield expression outside of generator literal
 --> $DIR/yield_in_nested_fn.rs:6:13
  |
6 |             yield "hello";
  |             ^^^^^^^^^^^^^

Some errors have detailed explanations: E0627, E0658.
For more information about an error, try `rustc --explain E0627`.
